trunk/Archive2/c7/a8634977b7167f/output
main.cpp: In function ‘int main(int, char**)’:
main.cpp:11:18: error: call of overloaded ‘func(N::O)’ is ambiguous
    func  (N::O {});
                  ^
main.cpp:11:18: note: candidates are:
main.cpp:6:6: note: void func(N::O)
 void func (N::O) { } 
      ^
main.cpp:3:8: note: void N::func(N::O)
   void func (O) { } 
        ^
main.cpp: At global scope:
main.cpp:9:1: warning: unused parameter ‘argc’ [-Wunused-parameter]
 main (int argc, char *argv[]) {
 ^
main.cpp:9:1: warning: unused parameter ‘argv’ [-Wunused-parameter]
